# objective-slam

./: .gitignore  README.md  drost.m  model_description.m  point_pair_feature.m  trans_model_scene.m  voting_scheme.m
matlab/: compute_normals.m  compute_trans_adj.m  drost.m  model_description.m  my_discretize.m  plot_transformed_model.m  point_pair_feature.m  ppf_timer.m  voting_scheme.m  write_ply_cloud.m
matlab/utils/: compare_data_with_pcl.m  cuda_float3_c_write.m  transform_check.m  translation_vector_processing_check.m
matlab/utils/pk-matlabfns/: LICENSE  README
matlab/utils/ply/: ply_read.m  ply_write.m
pcl/alignment/: CMakeLists.txt  WIN_CMakeLists.txt  alignment.cpp  analyze_mian.py
pcl/alignment/include/: SearchStructure.h  alignment.h  book.h  debug.h  kernel.h  linalg.h  model.h  ppf.h  ppf_utils.h  scene.h  train_weights.h  vector_ops.h
pcl/alignment/include/impl/: parallel_hash_array.hpp  ppf_utils.hpp  scene_generation.hpp  util.hpp
pcl/alignment/src/: alignment.cpp  train_weights.cpp  transformation_clustering.cpp
pcl/alignment/src/cuda/: SearchStructure.cu  book.cu  hist_gpu_shmem_atomics.cu  kernel.cu  linalg.cu  model.cu  ppf.cu  ppf_jdl2.cu  ppf_utils.cu  scene.cu  vector_ops.cu
pcl/voxel_grid/: voxel_grid.cpp
utils/: transform_check.m
